[package]
name = "atmega32u4-usb-serial"
version = "0.1.0"
authors = ["Michael Mogenson <michael.mogenson@gmail.com>"]
edition = "2021"

test = false
bench = false

[features]
default = ["rt"]
rt = ["avr-device/rt"]

[dependencies]
embedded-hal = "0.2.4"
nb = "0.1.2"
ufmt = "0.1.0"

[dependencies.avr-device]
version = "0.5.0"
features = ["atmega32u4"]

[build-dependencies]
cc = "1.0.60"

[dev-dependencies]
panic-halt = "0.2.0"
arduino-hal = { git = "https://github.com/Rahix/avr-hal", rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4", features=["arduino-leonardo"]}

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
